# devit-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.devit/: dep_snapshots.json
devkit_cli/: __init__.py  main.py
devkit_cli/commands/: archive.py  clean.py  deps.py  env.py  find.py  info.py  init.py  run.py
devkit_cli/templates/aws/: README.md
devkit_cli/templates/aws/scripts/: ec2.py  main.py  s3.py
devkit_cli/templates/aws/tests/: test_scripts.py
devkit_cli/templates/django/: .gitignore  README.md  manage.py
devkit_cli/templates/django/apps/core/: views.py
devkit_cli/templates/django/{{module_name}}/: settings.py  urls.py  wsgi.py
devkit_cli/templates/fastapi/: README.md  main.py  requirements.txt
devkit_cli/templates/fastapi/app/routers/: health.py
devkit_cli/templates/fastapi/tests/: test_api.py
devkit_cli/templates/package/: README.md  pyproject.toml
devkit_cli/templates/package/tests/: test_core.py
devkit_cli/templates/package/{{module_name}}/: __init__.py  core.py
